update translations post 1.0.0Beta

--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -5,26 +5,26 @@
     <string name="failed_connection">%1$s-&gt;%2$s: Не атрымалася ўсталяваць злучэнне з %3$s: %4$s (праграма %5$d)</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: АДМОВАНА: %3$s</string>
     <string name="reload_app_circuits">Перазагрузіць ланцугі гэтага прыкладання?</string>
-    <string name="up">Угару</string>
+    <string name="up">Адпраўлена</string>
     <string name="action_protect_all_apps">Абараніць усе прыкладанні</string>
     <string name="tor_logs_description">Прагляд і капіраванне журналаў Tor</string>
     <string name="routed_over_country">Маршрутызацыя праз %1$s</string>
-    <string name="this_browser">Гэты браўзэр</string>
+    <string name="this_browser">Гэты браўзер</string>
     <string name="stats_combined">↓%2$s %1$s/с - ↑%4$s %3$s/с</string>
     <string name="action_connect">Падлучыцца</string>
     <string name="idle_toolbar_title">Tor VPN</string>
     <string name="circuits">Ланцугі</string>
-    <string name="apps">Прыкладанні</string>
+    <string name="apps">Праграмы</string>
     <string name="guard">Ахоўнік</string>
     <string name="guide_got_it">Зразумела</string>
-    <string name="error_view_logs">Прагляд часопісаў</string>
+    <string name="error_view_logs">Прагляд журналаў Tor</string>
     <string name="tor_logs">Журналы Tor</string>
-    <string name="connection_description">Настройка падлучэння да Tor</string>
+    <string name="connection_description">Наладзіць як падлучацца да Tor</string>
     <string name="label_not_protected">Не абаронена</string>
     <string name="unknown">Невядома</string>
-    <string name="action_refresh_circuits">Абнаўленне схемаў</string>
-    <string name="action_copy_logs">Капіяванне журналаў</string>
-    <string name="this_app">Гэта дадатак</string>
+    <string name="action_refresh_circuits">Абнавіць ланцугі</string>
+    <string name="action_copy_logs">Скапіяваць журналы</string>
+    <string name="this_app">Гэта праграма</string>
     <string name="reload_all_circuits_description">Для ўсіх вашых прыкладанняў будуць створаны новыя ланцугі. У выніку некаторыя прыкладанні і вэб-сайты могуць не пазнаць вас і выйсці з сваіх сэрвісаў.</string>
     <string name="exit_location_automatic">Аўтаматычна (самае бяспечнае)</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: дасыланне %3$d: %4$s (%5$s)</string>
@@ -34,20 +34,20 @@
     <string name="closed_connection">%1$s-&gt;%2$s: злучэнне закрыта</string>
     <string name="action_stop">Спыніць VPN</string>
     <string name="exit_location_description">Аўтаматычны рэжым выбірае рэтранслятар выхаду з любога пункта сеткі, незалежна ад месцазнаходжання. Гэта дапамагае абараніць вашу ананімнасць, прадухіляючы ўстанаўленне сувязі паміж вашымі дзеяннямі.</string>
-    <string name="app_routing_other_apps">Іншыя прыкладанні</string>
-    <string name="apps_description_all_protected">Усе прыкладанні абаронены</string>
+    <string name="app_routing_other_apps">Іншыя праграмы</string>
+    <string name="apps_description_all_protected">Усе праграмы абаронены</string>
     <string name="kill_switch">Kill switch</string>
     <string name="connection">Злучэнне</string>
     <string name="action_start">Запусціць VPN</string>
-    <string name="down">Уніз</string>
+    <string name="down">Прынята</string>
     <string name="always_on_vpn_description">Адкрыйце Сістэмныя наладкі Android</string>
-    <string name="tor_powered_app">Прыкладанне з падтрымкай Tor</string>
+    <string name="tor_powered_app">Праграмы на аснове Tor</string>
     <string name="error_something_went_wrong">Нешта пайшло не так</string>
     <string name="stats_delta">%1$s/с</string>
     <string name="exit_location">Размяшчэнне выхаду</string>
     <string name="action_configure">Наладзіць</string>
     <string name="connect_direct_to_tor">Прамое падлучэнне да Tor</string>
-    <string name="notification_channel_name">Апавяшчэнні TorVPN</string>
+    <string name="notification_channel_name">Апавяшчэнні Tor VPN</string>
     <string name="quickstart">Аўтаматычнае падключэнне</string>
     <string name="action_reconnect">Перападлучыцца</string>
     <string name="quickstart_description">Аўтаматычнае падлучэнне да сеткі Tor пры запуску</string>
@@ -58,13 +58,13 @@
     <string name="new_connection">%1$s-&gt;%2$s: НОВАЕ злучэнне з %3$s (праграма %4$d)</string>
     <string name="guide_bullet_head_2">Але не рабіце нічога рызыкоўнага</string>
     <string name="bootstrap_at">Загрузнік па адрасе: %1$s</string>
-    <string name="action_protect_this_app">Абараніць гэтую праграму</string>
-    <string name="kill_switch_description">Блакаваць падлучэнне дадаткаў да Інтэрнэту, калі сетка Tor недаступная</string>
+    <string name="action_protect_this_app">Абараніць гэтае прыкладанне</string>
+    <string name="kill_switch_description">Блакаваць падлучэнне праграм да інтэрнэту, калі сетка Tor недаступна</string>
     <string name="guide_bullet_head_1">Вы гатовыя прыступіць да тэсціравання</string>
     <string name="action_disconnect">Адлучыць</string>
     <string name="action_reload_circuits">Перазагрузка ланцугоў</string>
-    <string name="title_guide">Гэта прыкладанне \nэксперыментальнае</string>
-    <string name="notification_channel_description">Паказвае абнаўленні датычна TorVPN.</string>
+    <string name="title_guide">Гэта эксперыментальная\nпраграма</string>
+    <string name="notification_channel_description">Паказвае абнаўленні датычна Tor VPN.</string>
     <string name="always_on_vpn">Пастаянны VPN</string>
     <string name="app_name">Tor VPN</string>
     <string name="action_try_again">Паспрабуйце ізноў</string>
@@ -72,12 +72,12 @@
     <string name="state_disconnecting">Адлучэнне</string>
     <string name="app_routing_browsers">Браўзеры</string>
     <string name="action_open_app">Адкрыць %1$s</string>
-    <string name="guide_bullet_text_2">Гэта папярэдняя версія прыкладання, і яе небяспечна выкарыстоўваць для канфідэнцыяльных дзеянняў.</string>
+    <string name="guide_bullet_text_2">Гэта папярэдняя версія праграмы, яе небяспечна выкарыстоўваць для канфідэнцыяльных дзеянняў.</string>
     <string name="use_a_bridge_info">Масты дапамагаюць вам атрымаць бяспечны доступ да сеткі Tor у месцах, дзе Tor заблакаваны. У залежнасці ад таго, дзе вы знаходзіцеся, адзін мост можа працаваць лепш, чым іншы.</string>
     <string name="bridge_option_obfs4_built">obfs4 (убудаваны)</string>
     <string name="snowflake_built_in">Snowflake (убудаваны)</string>
     <string name="action_paste_bridges">Устаўце сюды адрасы сваіх мастоў</string>
-    <string name="none">Не</string>
+    <string name="none">Няма</string>
     <string name="bridges">Масты</string>
     <string name="add_new_bridge">Дадаць новыя масты</string>
     <string name="obfs4_description">У выніку ваш трафік выглядае як выпадковыя дадзеныя</string>
@@ -87,7 +87,7 @@
     <string name="use_a_bridge">Выкарыстоўвайце мост</string>
     <plurals name="n_bridges">
         <item quantity="one">Дададзены %1$s мост</item>
-        <item quantity="few">Дададзена %1$s мастоў</item>
+        <item quantity="few">Дададзена %1$s масты</item>
         <item quantity="many">Дададзена %1$s мастоў</item>
         <item quantity="other">Дададзена %1$s мастоў</item>
     </plurals>
@@ -100,17 +100,17 @@
     <string name="snowflake_description">Маршрутызацыя злучэння праз проксі-серверы Snowflake для стварэння бачнасці відэазванка</string>
     <string name="manual_bridge">Выбар уручную</string>
     <string name="built_in_bridges">Выберыце ўбудаваны мост</string>
-    <string name="description_independent_tor_powered_app">Гэты дадатак выкарыстоўвае ўласнае Tor-злучэнне, якое не залежыць ад Tor VPN. Прагледзець і наладзіць яго падлучэнне можна ў раздзеле %1$s.</string>
+    <string name="description_independent_tor_powered_app">Гэта праграма выкарыстоўвае ўласнае Tor-злучэнне, незалежна ад Tor VPN. Яго можна праглядзець і наладзіць ў раздзеле %1$s.</string>
     <string name="email_providers">Gmail або Riseup</string>
     <string name="get_new_bridges_description">Паколькі адрасы мастоў не з\'яўляюцца агульнадаступнымі, іх неабходна запытваць у праекту Tor.</string>
     <string name="telegram">Telegram</string>
     <string name="telegram_bot_subtitle">Паведамленне %s</string>
-    <string name="ask_bridge_bot">Спытайце ў бота bridge</string>
+    <string name="ask_bridge_bot">Запытаць масты</string>
     <string name="get_new_bridges">Атрыманне новых мастоў</string>
     <string name="email_bot_subtitle">Электронная пошта %s</string>
     <string name="web">Сайт</string>
     <string name="web_bot_subtitle">Наведайце %s</string>
-    <string name="label_some_protected">Некаторыя знаходзяцца пад аховай</string>
+    <string name="label_some_protected">Частковая абарона</string>
     <string name="remove_bridge">Выдаліць адрасы мастоў</string>
     <string name="help">Даведка</string>
     <string name="qs_error">Памылка злучэння</string>
@@ -118,7 +118,7 @@
     <string name="general">Агульныя</string>
     <string name="appearance">Афармленне</string>
     <string name="warnings">Папярэджанні</string>
-    <string name="signal">Сігнал</string>
+    <string name="signal">Signal</string>
     <string name="report_bug">Паведаміць аб памылцы</string>
     <string name="contact_support">Сувязь з падтрымкай</string>
     <string name="email">Электронная пошта</string>
@@ -129,7 +129,7 @@
     <string name="last_updated">Апошняе абнаўленне</string>
     <string name="tor_project">Праект Tor</string>
     <string name="exit_location_safest">Найвышэйшы</string>
-    <string name="up_content_description">Выгрузіць</string>
+    <string name="up_content_description">Запампаваць</string>
     <string name="down_content_description">Спампаваць</string>
     <string name="open_source_licenses">Ліцэнзіі адкрытага зыходнага кода</string>
     <string name="app_icon">Значок праграмы</string>
@@ -142,4 +142,24 @@
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="copied_clipboard">Скапіявана ў буфер абмену</string>
     <string name="add_bridge">Дадаць масты</string>
+    <string name="start_again">Пачаць зноў</string>
+    <string name="learn_more">Даведацца больш</string>
+    <string name="app_routing_system_apps">Сістэмныя праграмы</string>
+    <string name="no_internet">Няма злучэння з інтэрнэтам</string>
+    <string name="app_routing_show_apps">Паказаць праграмы: %1$s</string>
+    <string name="app_routing_hide_apps">Схаваць праграмы: %1$s</string>
+    <string name="current_state">Бягучы стан:</string>
+    <string name="use_bridges">Захаваць масты</string>
+    <string name="app_name_weather">Надвор\'е</string>
+    <string name="app_name_pingpong">Пінг-понг</string>
+    <string name="name_and_icon">Назва і значок</string>
+    <string name="launcher_hint">Выберыце назву і значок, якія будуць паказвацца на галоўным экране, у спісе праграм і ў апавяшчэннях.</string>
+    <string name="whatsapp">WhatsApp</string>
+    <string name="external_link">Знешняя спасылка</string>
+    <string name="start_testing">Пачаць тэст</string>
+    <string name="beta_report_bugs">Паведаміць пра памылкі</string>
+    <string name="general_description">Змяніць агульныя налады</string>
+    <string name="about_tor_vpn">Пра Tor VPN</string>
+    <string name="default_icon_and_name">Прадвызначаны значок і назва</string>
+    <string name="no_bridge">Без выкарыстання мастоў</string>
 </resources>
