--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -19,7 +19,7 @@
     <string name="action_refresh_circuits">回線を更新</string>
     <string name="apps_description_all_protected">すべてのアプリが保護されています</string>
     <string name="tor_logs_description">Tor ログを閲覧・コピーする</string>
-    <string name="always_on_vpn">VPN 常時オン</string>
+    <string name="always_on_vpn">常時接続 VPN</string>
     <string name="app_routing_other_apps">その他のアプリ</string>
     <string name="always_on_vpn_description">Android のシステム設定を開く</string>
     <string name="notification_channel_description">Tor VPN のアップデートを表示します。</string>
@@ -37,7 +37,7 @@
     <string name="error_something_went_wrong">問題が発生しました</string>
     <string name="kill_switch">キルスイッチ</string>
     <string name="quickstart_description">起動時に自動的に Tor ネットワークに接続する</string>
-    <string name="exit_location">出口</string>
+    <string name="exit_location">出口リレーの場所</string>
     <string name="exit_location_automatic">回線ごとにランダム</string>
     <string name="this_browser">このブラウザー</string>
     <string name="this_app">このアプリ</string>
@@ -45,17 +45,17 @@
     <string name="error_detail_message">Tor VPN は Tor ネットワークに接続できませんでした。</string>
     <string name="connection_description">Tor への接続方法を設定する</string>
     <string name="error_view_logs">Tor ログを表示</string>
-    <string name="action_open_app">%1$sを開く</string>
+    <string name="action_open_app">%1$s を開く</string>
     <string name="guard">ガード</string>
     <string name="connection">接続</string>
     <string name="app_routing_browsers">ブラウザー</string>
     <string name="guide_version_number" translatable="false">%1$s</string>
     <string name="reload_app_circuits_description">新しい回線はこのアプリだけに再構築されます。その結果、一部のアプリやウェブサイトがあなたを認識できなくなり、そのサービスからログアウトする可能性があります。</string>
-    <string name="failed_connection">%1$s-&gt;%2$s: %3$sへの接続に失敗しました: %4$s (app %5$d)</string>
+    <string name="failed_connection">%1$s-&gt;%2$s: %3$s への接続に失敗しました: %4$s (アプリ %5$d)</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: 失敗: %3$s</string>
     <string name="reload_app_circuits">この回線を更新しますか？</string>
     <string name="up">送信データ</string>
-    <string name="routed_over_country">%1$sを再構築</string>
+    <string name="routed_over_country">%1$s を経由</string>
     <string name="idle_toolbar_title">Tor VPN</string>
     <string name="circuits">回線</string>
     <string name="guide_got_it">了解</string>
@@ -68,15 +68,15 @@
     <string name="down">受信データ</string>
     <string name="action_configure">設定</string>
     <string name="connect_direct_to_tor">Tor に直接接続する</string>
-    <string name="circuit_app_description">%1$sの回線</string>
-    <string name="new_connection">%1$s-&gt;%2$s: %3$sへの新しい接続 (アプリ %4$d)</string>
+    <string name="circuit_app_description">%1$s の回線</string>
+    <string name="new_connection">%1$s-&gt;%2$s: %3$s への新しい接続 (アプリ %4$d)</string>
     <string name="bootstrap_at">Bootstrap :%1$s</string>
     <string name="action_reload_circuits">回線を再構築</string>
     <string name="title_guide">このアプリは非常に \n実験的です</string>
-    <string name="use_a_bridge_info">ブリッジは Tor がブロックされている場所で、Tor ネットワークに安全にアクセスするのに役立ちます。あなたがお住いの地域によって、最適に機能するブリッジは異なる可能性があります。</string>
+    <string name="use_a_bridge_info">ブリッジは Tor がブロックされている場所で、Tor ネットワークに安全にアクセスするのに役立ちます。あなたがお住まいの地域によって、最適に機能するブリッジは異なる可能性があります。</string>
     <string name="bridge_option_obfs4_built">obfs4 (内蔵)</string>
     <string name="snowflake_built_in">Snowflake (内蔵)</string>
-    <string name="action_paste_bridges">ブリッジアドレスをここに貼り付けてください。</string>
+    <string name="action_paste_bridges">ブリッジアドレスをここに貼り付けてください</string>
     <string name="none">なし</string>
     <string name="bridges">ブリッジ</string>
     <string name="add_new_bridge">新しいブリッジを追加する</string>
@@ -87,7 +87,7 @@
     <string name="debugging">デバッグ</string>
     <string name="use_a_bridge">ブリッジを使う</string>
     <plurals name="n_bridges">
-        <item quantity="other">%1$s個のブリッジが追加されました</item>
+        <item quantity="other">%1$s 個のブリッジが追加されました</item>
     </plurals>
     <string name="bridge_address">ブリッジアドレスを入力する</string>
     <string name="current_bridge">現在のブリッジ</string>
@@ -99,14 +99,14 @@
     <string name="manual_bridge">手動選択</string>
     <string name="built_in_bridges">あなたのブリッジ</string>
     <string name="email_providers">Gmail または Riseup</string>
-    <string name="get_new_bridges_description">ブリッジアドレスは公開されていないので、Tor Projectにリクエストする必要があります。</string>
+    <string name="get_new_bridges_description">多くのブリッジアドレスは公開されていないため、Tor Project にリクエストする必要があります。</string>
     <string name="telegram_bot_subtitle">メッセージ %s</string>
     <string name="label_some_protected">部分的な保護</string>
     <string name="remove_bridge">ブリッジアドレスを削除</string>
     <string name="ask_bridge_bot">ブリッジをリクエストする</string>
     <string name="get_new_bridges">他のブリッジを探す</string>
     <string name="email_bot_subtitle">メール %s</string>
-    <string name="web_bot_subtitle">%sに行く</string>
+    <string name="web_bot_subtitle">%s にアクセス</string>
     <string name="telegram">Telegram</string>
     <string name="web">ウェブ</string>
     <string name="help">ヘルプ</string>
@@ -133,12 +133,12 @@
     <string name="report_bug">バグレポート</string>
     <string name="contact_support">サポートに問い合わせ</string>
     <string name="email">メールアドレス</string>
-    <string name="whatsapp">Whatsapp</string>
+    <string name="whatsapp">WhatsApp</string>
     <string name="help_description_wip">Tor VPN は開発中のため、一部の機能が期待どおりに動作しない場合があります。何卒ご了承ください。</string>
     <string name="view_faq">FAQ を見る</string>
     <string name="help_description_bug_report">FAQ に記載されていない問題が発生した場合は、バグレポートを作成するか、サポートまでご連絡ください。</string>
     <string name="bug_tor_forum">Tor Forum</string>
-    <string name="bug_gitlab">Gitlab</string>
+    <string name="bug_gitlab">GitLab</string>
     <string name="action_refresh">更新</string>
     <string name="refresh_all_circuits">すべての回線を更新しますか？</string>
     <string name="change">変更</string>
@@ -154,12 +154,12 @@
     <string name="up_content_description">アップロード</string>
     <string name="down_content_description">ダウンロード</string>
     <string name="app_routing_system_apps">システムアプリ</string>
-    <string name="app_routing_show_apps">%1$s アプリを表示</string>
-    <string name="app_routing_hide_apps">%1$s アプリを非表示</string>
+    <string name="app_routing_show_apps">%1$s 個のアプリを表示</string>
+    <string name="app_routing_hide_apps">%1$s 個のアプリを非表示</string>
     <string name="exit_location_safest">最も安全</string>
     <string name="privacy_policy">プライバシーポリシー</string>
     <string name="open_source_licenses">オープンソースライセンス</string>
-    <string name="app_icon">アプリアイコン</string>
+    <string name="app_icon">アプリのアイコン</string>
     <string name="connect_automatically">自動的に接続する</string>
     <string name="connect_automatically_description">起動時に自動的に Tor ネットワークに接続する</string>
     <string name="advanced">詳細設定</string>
@@ -173,9 +173,9 @@
     <string name="copied_clipboard">クリップボードにコピーしました</string>
     <string name="add_bridge">ブリッジを追加</string>
     <string name="view_support_docs">サポートドキュメントを表示</string>
-    <string name="app_name_garden">庭園</string>
-    <string name="app_name_weather">天気</string>
-    <string name="app_name_pingpong">卓球</string>
+    <string name="app_name_garden">Garden</string>
+    <string name="app_name_weather">Weather</string>
+    <string name="app_name_pingpong">Ping Pong</string>
     <string name="about_support_title">非営利団体による開発</string>
     <string name="about_support_description">私たちは、世界中の何百万人もの人々にとって Tor を堅牢かつ安全なものに保つために、皆様の支援に支えられています。</string>
     <string name="about_support_action">今すぐ寄付する</string>
