--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,7 +9,7 @@
     <string name="action_protect_this_app">Защитить это приложение</string>
     <string name="action_start">Запустить VPN</string>
     <string name="action_refresh_circuits">Обновить цепочки</string>
-    <string name="notification_channel_name">Уведомления TorVPN</string>
+    <string name="notification_channel_name">Уведомления Tor VPN</string>
     <string name="action_protect_all_apps">Защитить все приложения</string>
     <string name="action_stop">Остановить VPN</string>
     <string name="action_copy_logs">Скопировать логи</string>
@@ -20,7 +20,7 @@
     <string name="state_disconnected">Отключен</string>
     <string name="app_routing_tor_apps">Приложения на базе Tor</string>
     <string name="app_routing_browsers">Браузеры</string>
-    <string name="notification_channel_description">Показывает обновления о TorVPN.</string>
+    <string name="notification_channel_description">Показывает обновления о Tor VPN.</string>
     <string name="apps">Приложения</string>
     <string name="apps_description_all_protected">Все приложения защищены</string>
     <string name="tor_logs">Логи Tor</string>
@@ -42,12 +42,12 @@
     <string name="kill_switch_description">Заблокируйте приложениям подключение к Интернету, если сеть Tor недоступна</string>
     <string name="quickstart">Автоподключение</string>
     <string name="quickstart_description">Автоматическое подключение к сети Tor при запуске</string>
-    <string name="exit_location_description">При использовании Tor веб-сайты и приложения будут думать, что вы подключаетесь из той страны, что и выходное реле, которое является финальным прыжком в вашей цепочке Tor.</string>
+    <string name="exit_location_description">При использовании Tor веб-сайты и приложения будут думать, что вы подключаетесь из той страны, что и выходной узел, который является финальным узлом в вашей цепочке Tor.</string>
     <string name="exit_location">Место выхода</string>
     <string name="exit_location_automatic">Случайно для каждой цепочки</string>
     <string name="action_open_app">Открыть %1$s</string>
-    <string name="up">Вверх</string>
-    <string name="down">Вниз</string>
+    <string name="up">Отправлено</string>
+    <string name="down">Принято</string>
     <string name="this_browser">Этот браузер</string>
     <string name="this_app">Это приложение</string>
     <string name="tor_powered_app">Приложение на базе Tor</string>
@@ -55,7 +55,7 @@
     <string name="bootstrap_at">Начальная загрузка на: %1$s</string>
     <string name="new_connection">%1$s-&gt;%2$s: НОВОЕ подключение к %3$s (приложение %4$d)</string>
     <string name="action_reload_circuits">Перезагрузить цепочки</string>
-    <string name="new_connection_hop">%1$s-&gt;%2$s: прыжок %3$d: %4$s (%5$s)</string>
+    <string name="new_connection_hop">%1$s-&gt;%2$s: переход %3$d: %4$s (%5$s)</string>
     <string name="failed_connection">%1$s-&gt;%2$s: ОШИБКА подключения к %3$s: %4$s (приложение %5$d)</string>
     <string name="reload_all_circuits_description">Новые цепочки будут установлены для всех ваших приложений. Некоторые приложения и веб-сайты могут не узнать вас в результате этого и инициируют выход из своих сервисов.</string>
     <string name="reload_app_circuits_description">Новые цепочки будут установлены только для этого приложения. Некоторые приложения и веб-сайты могут не узнать вас в результате этого и инициируют выход из своих сервисов.</string>
@@ -130,7 +130,7 @@
     <string name="refresh_all_circuits">Обновить все цепочки?</string>
     <string name="new_bridges">Дайте мне новые мосты</string>
     <string name="new_bridges_result">Ваши новые мосты:</string>
-    <string name="bug_gitlab">Через Gitlab</string>
+    <string name="bug_gitlab">Через GitLab</string>
     <string name="bot_msg_welcome">Добро пожаловать, усталый путник</string>
     <string name="bot_msg_results">Вот ваши мосты</string>
     <string name="new_circuits_warnings">Предупреждения о новых цепочках</string>
@@ -138,10 +138,10 @@
     <string name="fetching_bridges">Получение новых мостов…</string>
     <string name="launcher_hint">Выберите иконку и название для главного экрана и для списка всех приложений. Стандартная иконка и название Tor VPN по-прежнему будут использоваться в уведомлениях.</string>
     <string name="bridge_bot">Бот мостов</string>
-    <string name="help_description_bug_report">Если вы столкнулись с проблемой, которая не описана в FAQ, создайте отчёт об ошибке или свяжитесь с поддержкой.</string>
+    <string name="help_description_bug_report">Если вы столкнулись с проблемой, которая не описана в ЧаВо, создайте отчёт об ошибке или свяжитесь с поддержкой.</string>
     <string name="name_and_icon">Название и иконка</string>
     <string name="new_circuits_warnings_description">Предупреждать перед перезагрузкой цепочек.</string>
-    <string name="view_faq">Посмотреть наш FAQ</string>
+    <string name="view_faq">Частые вопросы</string>
     <string name="help_description_wip">Tor VPN находится на стадии разработки, и некоторые функции могут работать не так, как ожидалось.</string>
     <string name="bug_tor_forum">На форуме Tor</string>
     <string name="change">Изменить</string>
@@ -175,8 +175,9 @@
     <string name="obfs4" translatable="false">obfs4</string>
     <string name="copied_clipboard">Скопировано в буфер обмена</string>
     <string name="add_bridge">Добавить мосты</string>
-    <string name="view_support_docs">Просмотр документов службы поддержки</string>
+    <string name="view_support_docs">Просмотр документов поддержки</string>
     <string name="app_name_garden">Сад</string>
     <string name="app_name_weather">Погода</string>
     <string name="app_name_pingpong">Пинг Понг</string>
+    <string name="learn_more">Узнать больше</string>
 </resources>
