--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -3,21 +3,21 @@
     <string name="action_cancel">取消</string>
     <string name="action_disconnect">断开连接</string>
     <string name="action_reconnect">重新连接</string>
-    <string name="action_try_again">再次尝试</string>
-    <string name="action_protect_this_app">代理选中的应用</string>
+    <string name="action_try_again">重试</string>
+    <string name="action_protect_this_app">保护此应用</string>
     <string name="action_start">启动 VPN</string>
     <string name="action_stop">停止 VPN</string>
     <string name="action_refresh_circuits">刷新线路</string>
     <string name="action_copy_logs">复制日志</string>
     <string name="state_connected">已连接</string>
-    <string name="state_disconnecting">断开连接中</string>
+    <string name="state_disconnecting">正在断开连接</string>
     <string name="state_disconnected">已断开连接</string>
-    <string name="app_routing_tor_apps">基于 Tor 的应用程序</string>
+    <string name="app_routing_tor_apps">基于 Tor 的应用</string>
     <string name="app_routing_browsers">浏览器</string>
-    <string name="app_routing_other_apps">其他应用程序</string>
-    <string name="notification_channel_description">显示有关 TorVPN 的更新信息。</string>
-    <string name="notification_channel_name">TorVPN 通知</string>
-    <string name="apps_description_all_protected">已代理所有应用程序</string>
+    <string name="app_routing_other_apps">其他应用</string>
+    <string name="notification_channel_description">显示 Tor VPN 相关更新。</string>
+    <string name="notification_channel_name">Tor VPN 通知</string>
+    <string name="apps_description_all_protected">已保护所有应用</string>
     <string name="tor_logs">Tor 日志</string>
     <string name="tor_logs_description">查看并复制 Tor 日志</string>
     <string name="always_on_vpn">始终运行 VPN</string>
@@ -26,69 +26,69 @@
     <string name="action_configure">配置</string>
     <string name="app_name">Tor VPN</string>
     <string name="action_connect">连接</string>
-    <string name="action_protect_all_apps">代理所有软件</string>
+    <string name="action_protect_all_apps">保护所有软件</string>
     <string name="state_connecting">正在连接…</string>
-    <string name="apps">应用程序</string>
-    <string name="exit_location_description">使用 Tor 时，网站和应用会认为您是从与出口中继相同的国家/地区进行连接的，这是每个 Tor 线路中的最后跃点。</string>
-    <string name="guide_bullet_head_2">但切忌做任何有风险的事</string>
-    <string name="guide_bullet_text_1">不要忘记向我们的开发人员报告您发现的任何错误。</string>
-    <string name="guide_bullet_text_2">这是应用程序的预发布版本，不适合用于敏感活动。</string>
+    <string name="apps">应用</string>
+    <string name="exit_location_description">使用 Tor 时，网站和应用认为你的连接来自出口中继所在国家。出口中继指 Tor 线路的最后一个跃点。</string>
+    <string name="guide_bullet_head_2">请勿进行任何危险操作</string>
+    <string name="guide_bullet_text_1">如果发现任何错误，请提交给开发团队。</string>
+    <string name="guide_bullet_text_2">这只是预发布版本，用于敏感活动存在安全风险。</string>
     <string name="error_something_went_wrong">出错了</string>
     <string name="error_detail_message">Tor VPN 无法连接到 Tor 网络。</string>
     <string name="error_view_logs">查看 Tor 日志</string>
     <string name="connection">连接</string>
-    <string name="connection_description">配置如何连接 Tor</string>
+    <string name="connection_description">配置 Tor 连接方式</string>
     <string name="stats_delta">%1$s/s</string>
     <string name="stats_combined">↓%2$s %1$s/s - ↑%4$s %3$s/s</string>
     <string name="quickstart">自动连接</string>
     <string name="quickstart_description">启动时自动连接 Tor 网络</string>
     <string name="exit_location_automatic">每个线路随机</string>
-    <string name="up">上行</string>
-    <string name="down">下行</string>
+    <string name="up">上传</string>
+    <string name="down">下载</string>
     <string name="this_browser">此浏览器</string>
-    <string name="this_app">此应用程序</string>
-    <string name="tor_powered_app">基于 Tor 的应用程序</string>
+    <string name="this_app">此应用</string>
+    <string name="tor_powered_app">基于 Tor 的应用</string>
     <string name="guide_bullet_head_1">报告错误</string>
-    <string name="kill_switch">紧急断开</string>
-    <string name="kill_switch_description">如果无法连接到 Tor 网络，阻止应用程序连接到互联网</string>
+    <string name="kill_switch">断网开关</string>
+    <string name="kill_switch_description">如果无法连接到 Tor 网络，阻止应用连接互联网</string>
     <string name="exit_location">出口位置</string>
     <string name="reload_app_circuits">刷新此线路？</string>
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="stats_down" translatable="false">%1$s</string>
     <string name="guard">守卫节点</string>
     <string name="action_open_app">打开 %1$s</string>
-    <string name="action_reload_circuits">重载线路</string>
-    <string name="reload_app_circuits_description">只为这个应用程序建立新的线路。一些应用程序和网站可能无法识别您，并可能将您从其服务中登出。</string>
-    <string name="failed_connection">%1$s-&gt;%2$s：连接 %3$s 失败：%4$s（应用 %5$d）</string>
+    <string name="action_reload_circuits">重新加载线路</string>
+    <string name="reload_app_circuits_description">仅对此应用新建线路。因此，一些应用和网站可能无法识别你的身份，需要重新登录相关服务。</string>
+    <string name="failed_connection">%1$s-&gt;%2$s: 连接失败 %3$s: %4$s （应用 %5$d）</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: 失败: %3$s</string>
     <string name="email_providers">Gmail 或 Riseup</string>
     <string name="routed_over_country">通过 %1$s 路由</string>
     <string name="get_new_bridges_description">由于网桥地址不公开，您需要向 Tor Project 请求网桥。</string>
-    <string name="use_a_bridge_info">网桥帮助您在 Tor 被屏蔽的地方安全访问 Tor 网络。根据您所在的位置，某些网桥可能对您更有效。</string>
+    <string name="use_a_bridge_info">在 Tor 被屏蔽时，可使用网桥来安全地访问 Tor 网络。根据您所在的位置，不同网桥的效果可能不同。</string>
     <string name="bridge_option_obfs4_built">obfs4（内置）</string>
     <string name="snowflake_built_in">Snowflake（内置）</string>
     <string name="idle_toolbar_title">Tor VPN</string>
     <string name="circuits">线路</string>
     <string name="guide_got_it">好的</string>
     <string name="unknown">未知</string>
-    <string name="reload_all_circuits_description">为您的所有应用程序将建立新的线路。一些应用程序和网站可能无法识别您，并可能将您从其服务中登出。</string>
-    <string name="action_paste_bridges">在此处粘贴您的网桥地址</string>
+    <string name="reload_all_circuits_description">所有应用将使用新的线路，因此，一些应用和网站可能无法识别你的身份，可能需要重新登录相关服务。</string>
+    <string name="action_paste_bridges">在此处粘贴网桥地址</string>
     <string name="none">无</string>
     <string name="telegram">Telegram</string>
     <string name="bridges">网桥</string>
-    <string name="closed_connection">%1$s-&gt;%2$s：已关闭连接</string>
+    <string name="closed_connection">%1$s-&gt;%2$s：已断开连接</string>
     <string name="telegram_bot_subtitle">发送消息给 %s</string>
     <string name="add_new_bridge">添加新网桥</string>
-    <string name="obfs4_description">将您的流量伪装成随机数据</string>
-    <string name="description_independent_tor_powered_app">此应用使用自己的 Tor 连接，独立于 Tor VPN。在 %1$s 中查看和配置其连接。</string>
+    <string name="obfs4_description">将您的流量伪装为随机数据</string>
+    <string name="description_independent_tor_powered_app">此应用使用自有 Tor 连接，独立于 Tor VPN。请前往 %1$s 查看和配置其连接。</string>
     <string name="bridge_settings">网桥设置</string>
     <string name="obfs4_built_in">obfs4（内置）</string>
-    <string name="debugging">调试</string>
+    <string name="debugging">正在调试</string>
     <string name="use_a_bridge">使用网桥</string>
     <plurals name="n_bridges">
-        <item quantity="other">%1$s 个网桥已添加</item>
+        <item quantity="other">已添加 %1$s 个网桥</item>
     </plurals>
-    <string name="connect_direct_to_tor">直接连接到 Tor</string>
+    <string name="connect_direct_to_tor">直接连接 Tor</string>
     <string name="bridge_address">输入网桥地址</string>
     <string name="current_bridge">当前网桥</string>
     <string name="snowflake">Snowflake</string>
@@ -96,20 +96,20 @@
     <string name="bridge_addresses">网桥地址</string>
     <string name="circuit_app_description">%1$s 的线路</string>
     <string name="bridge_address_description">粘贴已知的网桥地址</string>
-    <string name="get_new_bridges">查找更多网桥</string>
+    <string name="get_new_bridges">获取更多网桥</string>
     <string name="email_bot_subtitle">发送邮件至 %s</string>
     <string name="action_save">保存</string>
     <string name="new_connection">%1$s-&gt;%2$s：与 %3$s 的新连接（应用 %4$d）</string>
-    <string name="bootstrap_at">引导于：%1$s</string>
-    <string name="web">网站</string>
-    <string name="snowflake_description">将您的流量伪装成视频通话</string>
+    <string name="bootstrap_at">启动进度：%1$s</string>
+    <string name="web">Web</string>
+    <string name="snowflake_description">将您的流量伪装为视频通话</string>
     <string name="manual_bridge">手动选择</string>
-    <string name="title_guide">此应用是 \n高度实验性的</string>
+    <string name="title_guide">此应用尚处于 \n高度实验阶段</string>
     <string name="web_bot_subtitle">访问 %s</string>
     <string name="built_in_bridges">您的网桥</string>
     <string name="label_not_protected">无保护</string>
-    <string name="new_connection_hop">%1$s-&gt;%2$s: 跳 %3$d: %4$s (%5$s)</string>
-    <string name="label_some_protected">有些受保护</string>
+    <string name="new_connection_hop">%1$s-&gt;%2$s: 跃点 %3$d: %4$s (%5$s)</string>
+    <string name="label_some_protected">有些受到保护</string>
     <string name="remove_bridge">移除网桥地址</string>
     <string name="general">常规</string>
     <string name="qs_error">连接错误</string>
@@ -120,38 +120,38 @@
     <string name="appearance">外观</string>
     <string name="signal">Signal</string>
     <string name="report_bug">报告错误</string>
-    <string name="contact_support">联系支持人员</string>
+    <string name="contact_support">联系支持</string>
     <string name="email">电子邮件</string>
     <string name="action_refresh">刷新</string>
     <string name="refresh_all_circuits">刷新所有线路？</string>
     <string name="name_and_icon">名称和图标</string>
-    <string name="launcher_hint">选择要在主屏幕、应用抽屉和通知中显示的图标和名称。</string>
+    <string name="launcher_hint">请选择图标和名称，用于在主屏幕、应用抽屉和通知中显示。</string>
     <string name="general_description">配置常规设置</string>
-    <string name="apps_description">选择要通过 Tor 路由的应用</string>
-    <string name="whatsapp">Whatsapp</string>
-    <string name="new_bridges">给我新网桥</string>
-    <string name="fetching_bridges">正在获取您的新网桥…</string>
-    <string name="new_bridges_result">这是您的新网桥：</string>
-    <string name="new_circuits_warnings">新建线路警告</string>
+    <string name="apps_description">请选择 Tor 路由的应用</string>
+    <string name="whatsapp">WhatsApp</string>
+    <string name="new_bridges">提供新的网桥</string>
+    <string name="fetching_bridges">正在获取新的网桥…</string>
+    <string name="new_bridges_result">以下为新的网桥：</string>
+    <string name="new_circuits_warnings">新线路警告</string>
     <string name="new_circuits_warnings_description">重新加载线路之前发出警告。</string>
     <string name="change">更改</string>
     <string name="use_bridges">保存网桥</string>
     <string name="about">关于</string>
     <string name="version">版本</string>
-    <string name="last_updated">最后更新</string>
+    <string name="last_updated">最近更新</string>
     <string name="tor_project">Tor Project</string>
-    <string name="view_faq">查看我们的常见问题</string>
-    <string name="help_description_wip">Tor VPN 仍在开发中，某些功能可能无法按预期运行。</string>
-    <string name="help_description_bug_report">如果您遇到我们的常见问题中没有回答的问题，请打开错误报告或联系支持人员。</string>
-    <string name="bug_tor_forum">在 Tor 论坛上</string>
-    <string name="bug_gitlab">在 Gitlab 上</string>
+    <string name="view_faq">查看常见问题</string>
+    <string name="help_description_wip">Tor VPN 仍处于开发阶段，部分功能可能无法正常运行。</string>
+    <string name="help_description_bug_report">如果在常见问题中未找到你所需的答案，请提交错误报告或联系支持。</string>
+    <string name="bug_tor_forum">Tor 论坛</string>
+    <string name="bug_gitlab">GitLab</string>
     <string name="obfs4_bridge">obfs4 网桥</string>
     <string name="bridge_bot">网桥机器人</string>
-    <string name="bot_msg_welcome">欢迎，疲惫的旅行者</string>
-    <string name="bot_msg_results">这是您的网桥</string>
-    <string name="about_description">了解有关 Tor VPN 的更多信息</string>
-    <string name="about_description_long">Tor VPN 是实验性 VPN 应用，由 Tor 和 Tor 浏览器的开发者 %1$s 开发，这些是世界上最强大的在线隐私和自由工具。</string>
-    <string name="no_internet">没有互联网</string>
+    <string name="bot_msg_welcome">欢迎您，疲惫的旅行者</string>
+    <string name="bot_msg_results">以下是你的网桥</string>
+    <string name="about_description">了解更多 Tor VPN 相关信息</string>
+    <string name="about_description_long">Tor VPN 是一款实验性 VPN 应用，由 Tor 和 Tor 浏览器的开发团队 %1$s 开发。Tor 浏览器是世界上最强大的在线隐私和自由工具。</string>
+    <string name="no_internet">无网络连接</string>
     <string name="up_content_description">上传</string>
     <string name="down_content_description">下载</string>
     <string name="current_state">当前状态：</string>
@@ -161,7 +161,7 @@
     <string name="app_routing_show_apps">显示 %1$s 个应用</string>
     <string name="advanced">高级</string>
     <string name="privacy_policy">隐私政策</string>
-    <string name="open_source_licenses">开放源代码许可</string>
+    <string name="open_source_licenses">开源许可证</string>
     <string name="app_icon">应用图标</string>
     <string name="connect_automatically">自动连接</string>
     <string name="connect_automatically_description">启动时自动连接 Tor 网络</string>
@@ -173,21 +173,21 @@
     <string name="copied_clipboard">已复制到剪贴板</string>
     <string name="add_bridge">添加网桥</string>
     <string name="view_support_docs">查看支持文档</string>
-    <string name="app_name_garden">Garden</string>
-    <string name="app_name_weather">Weather</string>
-    <string name="app_name_pingpong">Ping Pong</string>
+    <string name="app_name_garden">园艺</string>
+    <string name="app_name_weather">天气</string>
+    <string name="app_name_pingpong">乒乓球</string>
     <string name="about_support_title">由非营利组织开发</string>
-    <string name="about_support_description">我们依靠像您这样的支持者来帮助我们保持 Tor 的稳健和安全，以服务全球数百万用户。</string>
+    <string name="about_support_description">Tor 的强大与安全，离不开您的支持。您的每一份帮助，都在保护着全球数百万用户。</string>
     <string name="about_support_action">立即捐赠</string>
-    <string name="beta_intro">欢迎使用测试版。开始使用之前，您需要了解一些事项：</string>
+    <string name="beta_intro">欢迎使用 Beta 版。使用之前，请务必了解以下事项：</string>
     <string name="beta_test_thoroughly">全面测试</string>
-    <string name="beta_test_description">这是一个早期访问版本，旨在进行测试和反馈。</string>
+    <string name="beta_test_description">这是一款先行体验版，主要用于测试和收集反馈。</string>
     <string name="beta_risks">了解风险</string>
-    <string name="beta_risks_description">测试版可能会泄露信息，请勿用于敏感活动。</string>
+    <string name="beta_risks_description">Beta 版可能泄露信息，请勿用于敏感活动。</string>
     <string name="how_to_report_bugs">如何报告错误</string>
     <string name="external_link">外部链接</string>
     <string name="start_testing">开始测试</string>
     <string name="learn_more">了解更多</string>
     <string name="beta_report_bugs">报告错误</string>
-    <string name="beta_report_bugs_description">您可以通过向我们的开发者报告您发现的任何错误来提供帮助。</string>
+    <string name="beta_report_bugs_description">请向开发团队提交你发现的任何错误，以此提供帮助。</string>
 </resources>
