--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -10,11 +10,11 @@
     <string name="always_on_vpn">VPN siempre activa</string>
     <string name="kill_switch_description">Bloquear la conexión de aplicaciones a internet si no se puede conectar a la red Tor</string>
     <string name="error_detail_message">Tor VPN no se ha podido conectar a la red Tor.</string>
-    <string name="exit_location_description">Mientras usas Tor, los sitios web y las aplicaciones pensarán que te estás conectando desde el mismo país que tu relé de salida, que es el salto final en cada uno de tus circuitos Tor.</string>
+    <string name="exit_location_description">Mientras usas Tor, los sitios web y las aplicaciones pensarán que te estás conectando desde el mismo país que tu repetidor de salida, que es el salto final en cada uno de tus circuitos Tor.</string>
     <string name="closed_connection">%1$s-&gt;%2$s: conexión cerrada</string>
-    <string name="reload_all_circuits_description">Los nuevos circuitos serán establecidos para todas tus aplicaciones. Como resultado, algunas aplicaciones y páginas web puede que no te reconozcan y cierren la sesión de tus servicios.</string>
+    <string name="reload_all_circuits_description">Se establecerán nuevos circuitos para todas tus aplicaciones. Como resultado, algunas aplicaciones y páginas web puede que no te reconozcan y cierren la sesión.</string>
     <string name="guide_bullet_text_1">No olvides reportar cualquier fallo que encuentres a nuestros desarrolladores.</string>
-    <string name="reload_app_circuits_description">Los nuevos circuitos serán establecidos únicamente para esta aplicación. Como resultado, algunas aplicaciones y páginas web no te reconocerán y puede que te cierre la sesión de sus servicios.</string>
+    <string name="reload_app_circuits_description">Se establecerán nuevos circuitos únicamente para esta aplicación. Como resultado, algunas aplicaciones y páginas web puede que no te reconozcan y cierren la sesión.</string>
     <string name="action_configure">Configurar</string>
     <string name="action_connect">Conectar</string>
     <string name="action_reconnect">Reconectar</string>
@@ -30,14 +30,14 @@
     <string name="state_disconnected">Desconectado</string>
     <string name="app_routing_browsers">Navegadores</string>
     <string name="app_routing_other_apps">Otras aplicaciones</string>
-    <string name="notification_channel_description">Muestra actualizaciones sobre TorVPN.</string>
-    <string name="notification_channel_name">Notificaciones de TorVPN</string>
+    <string name="notification_channel_description">Muestra actualizaciones sobre Tor VPN.</string>
+    <string name="notification_channel_name">Notificaciones de Tor VPN</string>
     <string name="apps">Aplicaciones</string>
     <string name="apps_description_all_protected">Todas las aplicaciones protegidas</string>
     <string name="tor_logs">Registros de Tor</string>
     <string name="tor_logs_description">Ver y copiar tus registros de Tor</string>
     <string name="guide_bullet_head_2">Pero no hagas nada arriesgado</string>
-    <string name="guide_bullet_text_2">Esta es una versión anterior al lanzamiento de la aplicación y no está lista para usarla para actividades sensitivas.</string>
+    <string name="guide_bullet_text_2">Esta es una versión anterior al lanzamiento de la aplicación y no está lista para usarla para actividades delicadas.</string>
     <string name="stats_down" translatable="false">%1$s</string>
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="error_something_went_wrong">Algo salió mal</string>
@@ -58,7 +58,7 @@
     <string name="guard">Guardián</string>
     <string name="bootstrap_at">Bootstrap en: %1$s</string>
     <string name="new_connection">%1$s-&gt;%2$s: NUEVA conexión a %3$s (aplicación %4$d)</string>
-    <string name="failed_connection">%1$s-&gt;%2$s: conexión FALLIDA a %3$s: %4$s (aplicación %5$d)</string>
+    <string name="failed_connection">%1$s-&gt;%2$s: Conexión FALLIDA a %3$s: %4$s (aplicación %5$d)</string>
     <string name="failed_connection_closed">%1$s-&gt;%2$s: FALLIDA: %3$s</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s: salto %3$d: %4$s (%5$s)</string>
     <string name="reload_app_circuits">¿Renovar este circuito?</string>
@@ -100,7 +100,7 @@
     <string name="manual_bridge">Selección manual</string>
     <string name="built_in_bridges">Tus puentes</string>
     <string name="bridge_option_obfs4_built">obfs4 (incorporado)</string>
-    <string name="description_independent_tor_powered_app">Esta aplicación utiliza su propia conexión Tor, independiente de la VPN Tor. Mira y configura tu conexión en %1$s.</string>
+    <string name="description_independent_tor_powered_app">Esta aplicación utiliza su propia conexión Tor, independiente de Tor VPN. Mira y configura tu conexión en %1$s.</string>
     <string name="obfs4_built_in">obfs4 (incorporado)</string>
     <string name="web_bot_subtitle">Visita %s</string>
     <string name="email_providers">Gmail o Riseup</string>
@@ -126,7 +126,7 @@
     <string name="warnings">Avisos</string>
     <string name="new_circuits_warnings_description">Avisar antes de recargar los circuitos.</string>
     <string name="fetching_bridges">Buscando tus puentes nuevos…</string>
-    <string name="bridge_bot">Bot del puente</string>
+    <string name="bridge_bot">Bot de puentes</string>
     <string name="use_bridges">Guardar puentes</string>
     <string name="new_bridges">Dame puentes nuevos</string>
     <string name="new_bridges_result">Aquí están tus puentes nuevos:</string>
@@ -137,22 +137,22 @@
     <string name="report_bug">Informar de un error</string>
     <string name="contact_support">Contacta con el equipo de ayuda</string>
     <string name="email">Correo electrónico</string>
-    <string name="whatsapp">Whatsapp</string>
+    <string name="whatsapp">WhatsApp</string>
     <string name="view_faq">Lee nuestras preguntas frecuentes</string>
-    <string name="help_description_wip">La VPN de Tor es experimental, y algunas características pueden no funcionar bien.</string>
+    <string name="help_description_wip">Tor VPN es experimental, y algunas características pueden no funcionar bien.</string>
     <string name="bug_tor_forum">En el Foro de Tor</string>
-    <string name="bug_gitlab">En Gitlab</string>
+    <string name="bug_gitlab">En GitLab</string>
     <string name="help_description_bug_report">Si encuentras un problema que no tiene respuesta en nuestras preguntas frecuentes, por favor abre un informe de error o contacta con el soporte técnico.</string>
     <string name="action_refresh">Actualizar</string>
     <string name="refresh_all_circuits">¿Refrescar todos los circuitos?</string>
     <string name="obfs4_bridge">puente obfs4</string>
     <string name="change">Cambiar</string>
     <string name="about">Acerca de</string>
-    <string name="about_description">Más información sobre la VPN de Tor</string>
+    <string name="about_description">Más información sobre la Tor VPN</string>
     <string name="tor_project">Proyecto Tor</string>
     <string name="version">Versión</string>
     <string name="last_updated">Última actualización</string>
-    <string name="about_description_long">La VPN de Tor es una aplicación experimental hecha por los %1$s, desarrolladores de Tor y el Navegador de Tor — las herramientas más fuertes del mundo para la privacidad y la libertad en línea.</string>
+    <string name="about_description_long">Tor VPN es una aplicación experimental hecha por los %1$s, desarrolladores de Tor y el Navegador Tor — las herramientas más fuertes del mundo para la privacidad y la libertad en línea.</string>
     <string name="no_internet">No internet</string>
     <string name="down_content_description">Descargar</string>
     <string name="current_state">Estado actual:</string>
@@ -176,17 +176,18 @@
     <string name="view_support_docs">Ver la documentación</string>
     <string name="the_internet">La red interna</string>
     <string name="about_support_title">Realizado por una organización sin ánimo de lucro</string>
-    <string name="about_support_description">Dependemos en colaboradores como usted para ayudarnos a mantener Tor fuerte y seguro para millones de personas en todo el mundo.</string>
+    <string name="about_support_description">Dependemos de colaboradores como tú para ayudarnos a mantener Tor fuerte y seguro para millones de personas en todo el mundo.</string>
     <string name="about_support_action">Donar ahora</string>
     <string name="beta_intro">Bienvenido a la Beta. Antes de empezar, hay algunas cosas que debes saber:</string>
-    <string name="beta_test_thoroughly">Realice pruebas exhaustivas</string>
-    <string name="beta_test_description">Esta se trata de una versión de acceso anticipado destinada a pruebas y comentarios.</string>
-    <string name="beta_risks">Conozca los riesgos</string>
-    <string name="beta_risks_description">Las versiones beta pueden filtrar información y no deben utilizarse para actividades sensibles.</string>
-    <string name="how_to_report_bugs">Cómo informar de errores</string>
+    <string name="beta_test_thoroughly">Realiza pruebas exhaustivas</string>
+    <string name="beta_test_description">Esta es una versión temprana para pruebas y comentarios.</string>
+    <string name="beta_risks">Conoce los riesgos</string>
+    <string name="beta_risks_description">Las versiones beta pueden filtrar información y no deben utilizarse para actividades delicadas.</string>
+    <string name="how_to_report_bugs">Cómo informar de problemas</string>
     <string name="external_link">Enlace externo</string>
     <string name="start_testing">Empezar a probar</string>
-    <string name="learn_more">Aprenda más</string>
-    <string name="beta_report_bugs">Informar de errores</string>
+    <string name="learn_more">Saber más</string>
+    <string name="beta_report_bugs">Informar de problemas</string>
     <string name="beta_report_bugs_description">Puedes ayudar informando a nuestros desarrolladores de cualquier error que encuentres.</string>
+    <string name="app_name_garden">Jardín</string>
 </resources>
