--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -2,16 +2,16 @@
 <resources>
     <string name="action_disconnect">Me déconnecter</string>
     <string name="action_refresh_circuits">Actualiser les circuits</string>
-    <string name="app_name">RPV Tor VPN</string>
-    <string name="notification_channel_description">Affiche les mises à jour relatives au RPV Tor VPN.</string>
+    <string name="app_name">RPV Tor VPN</string>
+    <string name="notification_channel_description">Affiche les mises à jour relatives au RPV Tor VPN.</string>
     <string name="action_try_again">Réessayer</string>
     <string name="action_start">Démarrer le RPV/VPN</string>
-    <string name="stats_combined">↓%2$s %1$s/s – ↑%4$s %3$s/s</string>
-    <string name="guide_bullet_text_1">N’oubliez pas de signaler les bogues que vous trouvez à nos développeurs.</string>
+    <string name="stats_combined">↓%2$s %1$s/s – ↑%4$s %3$s/s</string>
+    <string name="guide_bullet_text_1">N’oubliez pas de signaler les bogues que vous trouvez à notre équipe de développement.</string>
     <string name="stats_delta">%1$s/s</string>
     <string name="new_connection">%1$s-&gt;%2$s : NOUVELLE connexion à %3$s (appli %4$d)</string>
     <string name="action_reload_circuits">Recharger les circuits</string>
-    <string name="action_connect">Connexion</string>
+    <string name="action_connect">Me connecter</string>
     <string name="action_cancel">Annuler</string>
     <string name="action_reconnect">Me reconnecter</string>
     <string name="action_protect_all_apps">Protéger toutes les applis</string>
@@ -25,61 +25,61 @@
     <string name="app_routing_tor_apps">Applis propulsées par Tor</string>
     <string name="app_routing_browsers">Navigateurs</string>
     <string name="app_routing_other_apps">Autres applis</string>
-    <string name="notification_channel_name">Notifications du RPV Tor VPN</string>
+    <string name="notification_channel_name">Notifications du RPV Tor VPN</string>
     <string name="apps">Applis</string>
     <string name="apps_description_all_protected">Toutes les applis sont protégées</string>
     <string name="tor_logs">Journaux de Tor</string>
     <string name="tor_logs_description">Afficher et copier vos journaux de Tor</string>
     <string name="always_on_vpn">RPV/VPN permanent</string>
     <string name="always_on_vpn_description">Ouvrir les paramètres système d’Android</string>
-    <string name="guide_bullet_head_1">Signales des bogues</string>
+    <string name="guide_bullet_head_1">Signaler des bogues</string>
     <string name="guide_bullet_head_2">Mais ne faites rien de risqué</string>
     <string name="guide_bullet_text_2">Cette préversion de l’appli n’est pas adaptée aux activités sensibles.</string>
     <string name="stats_down" translatable="false">%1$s</string>
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="error_something_went_wrong">Un problème est survenu</string>
-    <string name="error_detail_message">Le RPV Tor VPN n’a pas pu se connecter au Réseau Tor.</string>
+    <string name="error_detail_message">Le RPV Tor VPN n’a pas pu se connecter au Réseau Tor.</string>
     <string name="error_view_logs">Afficher les journaux de Tor</string>
     <string name="connection">Connexion</string>
     <string name="connection_description">Configuration de la connexion à Tor</string>
-    <string name="kill_switch_description">Empêcher les applis de se connecter à Internet si le Réseau Tor est inaccessible</string>
-    <string name="kill_switch">uniquement sous tor</string>
+    <string name="kill_switch_description">Empêcher les applis de se connecter à Internet si le Réseau Tor est inaccessible</string>
+    <string name="kill_switch">Blocage sans Tor</string>
     <string name="quickstart">Connexion automatique</string>
-    <string name="quickstart_description">Se connecter automatiquement au Réseau Tor au lancement</string>
-    <string name="exit_location">Localisation de sortie</string>
-    <string name="exit_location_description">Quand vous utilisez Tor, les sites Web et les applis pensent que vous vous connectez à partir du même pays que votre relais de sortie, qui est le dernier saut de chacun de vos circuits Tor.</string>
+    <string name="quickstart_description">Se connecter automatiquement au Réseau Tor au lancement</string>
+    <string name="exit_location">Emplacement des sorties</string>
+    <string name="exit_location_description">Pendant que vous utilisez Tor, les sites Web et les applis pensent que vous vous connectez du même pays que votre relais de sortie, qui est le dernier saut de chacun de vos circuits Tor.</string>
     <string name="exit_location_automatic">Aléatoire par circuit</string>
-    <string name="up">montant</string>
-    <string name="down">descendant</string>
+    <string name="up">Amont</string>
+    <string name="down">Aval</string>
     <string name="this_browser">Ce navigateur</string>
-    <string name="this_app">Cette application</string>
-    <string name="tor_powered_app">Application alimentée par Tor</string>
+    <string name="this_app">Cette appli</string>
+    <string name="tor_powered_app">Appli propulsée par Tor</string>
     <string name="action_open_app">Ouvrir %1$s</string>
     <string name="guard">Garde</string>
-    <string name="bootstrap_at">Bootstrap à : %1$s</string>
+    <string name="bootstrap_at">Amorçage : %1$s</string>
     <string name="new_connection_hop">%1$s-&gt;%2$s : saut %3$d : %4$s (%5$s)</string>
-    <string name="failed_connection">%1$s &gt; %2$s : ÉCHEC de connexion à %3$s  : %4$s (appli %5$d)</string>
-    <string name="failed_connection_closed">%1$s-&gt;%2$s   ÉCHEC : %3$s</string>
-    <string name="closed_connection">%1$s &gt; %2$s  : la connexion est fermée</string>
+    <string name="failed_connection">%1$s &gt; %2$s : ÉCHEC de connexion à %3$s : %4$s (appli %5$d)</string>
+    <string name="failed_connection_closed">%1$s &gt; %2$s ÉCHEC : %3$s</string>
+    <string name="closed_connection">%1$s &gt; %2$s : la connexion est fermée</string>
     <string name="reload_all_circuits_description">Un nouveau circuit sera établi pour chacune de vos applis. Par conséquent, il se peut que certaines applis et certains sites Web ne vous reconnaissent pas et vous déconnectent de leurs services.</string>
     <string name="reload_app_circuits">Actualiser ce circuit ?</string>
     <string name="reload_app_circuits_description">Un nouveau circuit ne sera établi que pour cette appli. Par conséquent, il se peut que certaines applis et certains sites Web ne vous reconnaissent pas et vous déconnectent de leurs services.</string>
     <string name="action_configure">Configurer</string>
     <string name="routed_over_country">Acheminé par %1$s</string>
-    <string name="idle_toolbar_title">RPV Tor VPN</string>
+    <string name="idle_toolbar_title">RPV Tor VPN</string>
     <string name="circuits">Circuits</string>
-    <string name="guide_got_it">Compris</string>
+    <string name="guide_got_it">Valider</string>
     <string name="label_not_protected">Non protégées</string>
     <string name="unknown">Inconnu</string>
     <string name="connect_direct_to_tor">Connexion directe à Tor</string>
     <string name="circuit_app_description">Circuit pour %1$s</string>
     <string name="title_guide">Cette appli est totalement\nexpérimentale</string>
     <string name="guide_version_number" translatable="false">%1$s</string>
-    <string name="use_a_bridge_info">Les ponts vous aident à accéder au Réseau Tor en toute sécurité là où Tor est bloqué. Selon l’endroit où vous vous trouvez, un pont peut fonctionner mieux qu’un autre.</string>
+    <string name="use_a_bridge_info">Les ponts vous aident à accéder au Réseau Tor en toute sécurité là où Tor est bloqué. Selon l’endroit où vous vous trouvez, un pont peut fonctionner mieux qu’un autre.</string>
     <string name="none">Aucun</string>
     <string name="bridges">Ponts</string>
     <string name="add_new_bridge">Ajouter de nouveaux ponts</string>
-    <string name="description_independent_tor_powered_app">Cette appli utilise sa propre connexion à Tor, indépendante du RPV Tor VPN. Affichez et configurez plutôt sa connexion dans %1$s .</string>
+    <string name="description_independent_tor_powered_app">Cette appli utilise sa propre connexion à Tor, indépendante du RPV Tor VPN. Affichez et configurez plutôt sa connexion dans %1$s .</string>
     <string name="debugging">Débogage</string>
     <string name="use_a_bridge">Utiliser un pont</string>
     <string name="label_some_protected">Certaines sont protégées</string>
@@ -88,28 +88,28 @@
     <string name="action_save">Enregistrer</string>
     <string name="built_in_bridges">Vos ponts</string>
     <string name="email_providers">Gmail ou Riseup</string>
-    <string name="get_new_bridges_description">Comme les adresses de pont se sont pas publiques, vous devrez en demander une au Projet Tor.</string>
+    <string name="get_new_bridges_description">Les adresses de pont se sont pas publiques, vous devrez en demander une au Projet Tor.</string>
     <string name="snowflake_built_in">Snowflake (intégré)</string>
     <string name="telegram">Telegram</string>
     <string name="telegram_bot_subtitle">Message %s</string>
     <string name="obfs4_built_in">obfs4 (intégré)</string>
     <string name="bridge_address_description">Collez les adresses de pont que vous connaissez déjà</string>
-    <string name="get_new_bridges">Trouver d’autres ponts</string>
+    <string name="get_new_bridges">Chercher d’autres ponts</string>
     <string name="email_bot_subtitle">Courriel %s</string>
     <string name="web">Web</string>
-    <string name="manual_bridge">Sélection manuelle</string>
+    <string name="manual_bridge">Choix manuel</string>
     <string name="web_bot_subtitle">Visiter %s</string>
     <string name="bridge_option_obfs4_built">obfs4 (intégré)</string>
     <string name="action_paste_bridges">Collez ici les adresses de vos ponts</string>
     <string name="obfs4_description">Dissimule votre traffic sous forme de données aléatoires</string>
     <string name="bridge_settings">Paramètres des ponts</string>
     <plurals name="n_bridges">
-        <item quantity="one">Le pont %1$s a été ajouté</item>
-        <item quantity="many">%1$s ponts ajoutés</item>
-        <item quantity="other">%1$s ponts ajoutés</item>
+        <item quantity="one">%1$s pont a été ajouté</item>
+        <item quantity="many">%1$s ponts ont été ajoutés</item>
+        <item quantity="other">%1$s ponts ont été ajoutés</item>
     </plurals>
-    <string name="remove_bridge">Supprimer l\'adresse du pont</string>
-    <string name="bridge_address">Saisir l\'adresse du pont</string>
+    <string name="remove_bridge">Supprimer l’adresse du pont</string>
+    <string name="bridge_address">Saisir l’adresse du pont</string>
     <string name="ask_bridge_bot">Demander des ponts</string>
     <string name="bridge_addresses">Adresses des ponts</string>
     <string name="snowflake_description">Dissimule votre traffic sous forme d’appel vidéo</string>
@@ -117,63 +117,63 @@
     <string name="help">Aide</string>
     <string name="appearance">Apparence</string>
     <string name="qs_error">Erreur de connexion</string>
-    <string name="qs_show_error">Afficher l\'erreur</string>
+    <string name="qs_show_error">Afficher l’erreur</string>
     <string name="start_again">Recommencer</string>
     <string name="warnings">Avertissements</string>
     <string name="signal">Signal</string>
     <string name="report_bug">Signaler un bogue</string>
-    <string name="contact_support">Contacter le support</string>
+    <string name="contact_support">Contacter l’assistance</string>
     <string name="email">Courriel</string>
     <string name="action_refresh">Actualiser</string>
     <string name="change">Changer</string>
-    <string name="whatsapp">Whatsapp</string>
+    <string name="whatsapp">WhatsApp</string>
     <string name="about">A propos</string>
     <string name="version">Version</string>
     <string name="last_updated">Dernière mise à jour</string>
     <string name="tor_project">Projet Tor</string>
-    <string name="no_internet">Pas d\'internet</string>
+    <string name="no_internet">Pas d’internet</string>
     <string name="up_content_description">Téléverser</string>
     <string name="down_content_description">Télécharger</string>
-    <string name="exit_location_safest">le plus sûr</string>
+    <string name="exit_location_safest">Le plus sûr</string>
     <string name="app_routing_system_apps">Applis système</string>
     <string name="privacy_policy">Politique de confidentialité</string>
     <string name="open_source_licenses">Licences libres</string>
     <string name="app_icon">Icône de l’appli</string>
     <string name="connect_automatically">Connexion automatique</string>
-    <string name="connect_automatically_description">Se connecter automatiquement au Réseau Tor au lancement</string>
+    <string name="connect_automatically_description">Se connecter automatiquement au Réseau Tor au lancement</string>
     <string name="advanced">Avancé</string>
     <string name="obfs4" translatable="false">obfs4</string>
-    <string name="app_routing_show_apps">Afficher %1$s  applis</string>
+    <string name="app_routing_show_apps">Afficher %1$s applis</string>
     <string name="apps_description">Choisir les applis à acheminer avec Tor</string>
     <string name="general_description">Configurer les paramètres généraux</string>
-    <string name="about_tor_vpn">À propos du RPV Tor VPN</string>
+    <string name="about_tor_vpn">À propos du RPV Tor VPN</string>
     <string name="default_icon_and_name">Icône et nom par défaut</string>
     <string name="new_bridges">Donnez-moi de nouveaux ponts</string>
     <string name="fetching_bridges">Récupération de nouveau ponts…</string>
     <string name="refresh_all_circuits">Actualiser tous les circuits ?</string>
     <string name="name_and_icon">Nom et icône</string>
-    <string name="app_routing_hide_apps">Cacher %1$s applis</string>
-    <string name="new_bridges_result">Voici vos nouveaux ponts :</string>
+    <string name="app_routing_hide_apps">Cacher %1$s applis</string>
+    <string name="new_bridges_result">Voici vos nouveaux ponts :</string>
     <string name="launcher_hint">Choisissez une icône et un nom à afficher sur votre écran d’accueil, sur votre tiroir d’applis et dans les notifications.</string>
-    <string name="about_description_long">Le RPV Tor VPN est une appli expérimentale de réseau privé virtuel conçue par les %1$s, développeurs de Tor et du Navigateur Tor, l\'outil de protection des données personnelles, de la vie privée et de la liberté en ligne le plus robuste au monde.</string>
+    <string name="about_description_long">Le RPV Tor VPN est une appli expérimentale de réseau privé virtuel conçue par le %1$s, l’équipe conceptrice de Tor et du Navigateur Tor, l’outil de protection des données personnelles, de la vie privée et de la liberté en ligne le plus robuste au monde.</string>
     <string name="help_description_bug_report">Si un problème qui n’est pas traité dans notre FAQ survient, créez un relevé de bogue ou contactez l’assistance.</string>
-    <string name="current_state">État actuel :</string>
-    <string name="view_faq">Voir notre FAQ</string>
-    <string name="help_description_wip">Le RPV Tor VPN est en cours de développement et certaines fonctions pourraient ne pas fonctionner comme prévu.</string>
-    <string name="bug_gitlab">Sur Gitlab</string>
-    <string name="obfs4_bridge">bridge obfs4</string>
-    <string name="bot_msg_welcome">Bienvenue, voyageur fatigué</string>
-    <string name="new_circuits_warnings">Nouveaux avertissements de circuits</string>
+    <string name="current_state">État actuel :</string>
+    <string name="view_faq">Consulter notre FAQ</string>
+    <string name="help_description_wip">Le RPV Tor VPN est en cours de développement et certaines fonctions pourraient ne pas fonctionner comme prévu.</string>
+    <string name="bug_gitlab">Sur GitLab</string>
+    <string name="obfs4_bridge">pont obfs4</string>
+    <string name="bot_msg_welcome">Bienvenue, âme errante</string>
+    <string name="new_circuits_warnings">Nouveaux avertissements relatifs aux circuits</string>
     <string name="new_circuits_warnings_description">Avertir avant de recharger les circuits.</string>
-    <string name="bridge_bot">Robot de pont</string>
+    <string name="bridge_bot">Robot fournisseur de ponts</string>
     <string name="bot_msg_results">Voici vos ponts</string>
     <string name="bug_tor_forum">Sur le Forum Tor</string>
     <string name="the_internet">Internet</string>
     <string name="use_bridges">Enregistrer les ponts</string>
-    <string name="about_description">Plus de précisions sur le RPV Tor VPN</string>
+    <string name="about_description">Plus de précisions sur le RPV Tor VPN</string>
     <string name="no_bridge">N’utilise pas de ponts</string>
     <string name="copied_clipboard">Copié dans le presse-papiers</string>
-    <string name="view_support_docs">Voir la documentation d\'aide</string>
+    <string name="view_support_docs">Consulter les documents d’aide</string>
     <string name="add_bridge">Ajouter des ponts</string>
     <string name="app_name_garden">Jardin</string>
     <string name="app_name_weather">Météo</string>
@@ -183,7 +183,7 @@
     <string name="about_support_action">Faites un don maintenant</string>
     <string name="beta_intro">Bienvenue dans la version bêta. Avant de commencer, voici quelques précisions utiles :</string>
     <string name="beta_test_thoroughly">Tester minutieusement</string>
-    <string name="beta_test_description">Cette version en accès anticipé est destinée à être testée et à recueillir des rétroactions.</string>
+    <string name="beta_test_description">Cette version en accès anticipé est destinée à être testée et à recueillir votre rétroaction.</string>
     <string name="beta_risks">Connaître les risques</string>
     <string name="beta_risks_description">Les versions bêta peuvent divulguer des renseignements et ne doivent pas être utilisées pour des activités sensibles.</string>
     <string name="how_to_report_bugs">Signaler des bogues</string>
@@ -191,5 +191,5 @@
     <string name="start_testing">Commencer le test</string>
     <string name="learn_more">En apprendre davantage</string>
     <string name="beta_report_bugs">Signales des bogues</string>
-    <string name="beta_report_bugs_description">Vous pouvez nous aider en signalant les bogues que vous trouvez à nos développeurs.</string>
+    <string name="beta_report_bugs_description">Vous pouvez nous aider en signalant les bogues que vous trouvez à notre équipe de développement.</string>
 </resources>
