--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -41,8 +41,8 @@
     <string name="action_refresh_circuits">Atualizar circuitos</string>
     <string name="app_routing_tor_apps">Apps desenvolvidos por Tor</string>
     <string name="app_routing_other_apps">Outros apps</string>
-    <string name="notification_channel_description">Mostra atualizações sobre TorVPN.</string>
-    <string name="notification_channel_name">Notificações TorVPN</string>
+    <string name="notification_channel_description">Mostra atualizações sobre Tor VPN.</string>
+    <string name="notification_channel_name">Notificações Tor VPN</string>
     <string name="apps_description_all_protected">Todos os apps protegidos</string>
     <string name="apps">Apps</string>
     <string name="exit_location_automatic">Aleatório por circuito</string>
@@ -174,4 +174,5 @@
     <string name="stats_up" translatable="false">%1$s</string>
     <string name="add_bridge">Adicionar pontes</string>
     <string name="copied_clipboard">Copiado para a área de transferência</string>
+    <string name="learn_more">Saiba mais</string>
 </resources>
