--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="state_disconnecting">Đang ngắt kết nối</string>
     <string name="always_on_vpn_description">Mở Cài đặt Hệ thống Android</string>
-    <string name="notification_channel_description">Hiển thị các bản cập nhật về TorVPN.</string>
+    <string name="notification_channel_description">Hiển thị các bản cập nhật về Tor VPN.</string>
     <string name="stats_delta">%1$s/s</string>
     <string name="error_something_went_wrong">Có điều gì đó sai sót đã xảy ra</string>
     <string name="error_detail_message">VPN Tor đã không thể kết nối tới mạng lưới Tor Network.</string>
@@ -13,7 +13,7 @@
     <string name="exit_location_description">Chế độ tự động lựa chọn ra các rơ-le chuyển tiếp đầu ra exit từ bất cứ đâu trong mạng lưới, không kể đến địa điểm. Điều này giúp bảo vệ sự ẩn danh của bạn thông qua việc ngăn chặn các hoạt động của bạn khỏi bị móc nối, liên kết với nhau.</string>
     <string name="reload_all_circuits_description">Các mạch nối mới sẽ được thiết lập cho tất cả các app ứng dụng của bạn. Do đó, một số các app ứng dụng và trang web có thể sẽ không nhận diện ra bạn được, và có thể sẽ đăng xuất bạn ra khỏi các dịch vụ của họ.</string>
     <string name="action_refresh_circuits">Làm mới lại các mạch nối</string>
-    <string name="notification_channel_name">Các thông báo TorVPN</string>
+    <string name="notification_channel_name">Các thông báo Tor VPN</string>
     <string name="guide_bullet_text_2">Đây là một phiên bản tiền phát hành của app ứng dụng, và do vậy không hề an toàn để sử dụng cho các hoạt động nhạy cảm.</string>
     <string name="failed_connection">%1$s-&gt;%2$s: kết nối tới %3$s ĐÃ THẤT BẠI: %4$s (app ứng dụng %5$d)</string>
     <string name="action_disconnect">Ngắt kết nối</string>
@@ -109,7 +109,7 @@
     <string name="obfs4_built_in">obfs4 (tích hợp sẵn)</string>
     <string name="built_in_bridges">Lựa chọn một cầu Bridge tích hợp sẵn</string>
     <string name="bridge_settings">Cài đặt cầu Bridge</string>
-    <string name="whatsapp">Whatsapp</string>
+    <string name="whatsapp">WhatsApp</string>
     <string name="action_paste_bridges">Dán địa chỉ cầu Bridge mới của bạn tại đây</string>
     <string name="refresh_all_circuits">Làm mới lại tất cả các mạch nối circuit chứ?</string>
     <string name="add_new_bridge">Thêm cầu Bridge mới</string>
@@ -117,7 +117,7 @@
     <string name="bridge_address_description">Thêm một hoặc nhiều cầu Bridge được cung cấp bởi một tổ chức hoặc cá nhân đáng tin cậy.</string>
     <string name="name_and_icon">Tên và biểu tượng</string>
     <string name="circuit_app_description">Mạch nối circuit cho %1$s</string>
-    <string name="bug_gitlab">Trên Gitlab</string>
+    <string name="bug_gitlab">Trên GitLab</string>
     <string name="get_new_bridges">Lấy về cầu Bridge mới</string>
     <string name="apps_description">Lựa chọn các App để định tuyến thông qua Tor</string>
     <string name="general_description">Định cấu hình cài đặt chung</string>
@@ -162,4 +162,7 @@
     <string name="stats_down" translatable="false">%1$s</string>
     <string name="obfs4" translatable="false">obfs4</string>
     <string name="stats_up" translatable="false">%1$s</string>
+    <string name="add_bridge">Thêm cầu Bridge</string>
+    <string name="about_support_action">Quyên góp ngay</string>
+    <string name="learn_more">Tìm hiểu thêm</string>
 </resources>
